--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "fullcalendar": "^5.11.0",
+    "moment": "^2.29.3",
     "sass": "^1.51.0"
   },
   "devDependencies": {
